// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MiqAlertStructuredList should render alert expression structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_alert_expression"
>
  <FeatureToggle(StructuredListBody)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="0"
      onClick={[Function]}
      tabIndex={0}
      title=""
    >
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "style": Object {
              "color": "black",
            },
            "value": "Expression1",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="1"
      onClick={[Function]}
      tabIndex={1}
      title=""
    >
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "style": Object {
              "color": "black",
            },
            "value": "Expression2",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="2"
      onClick={[Function]}
      tabIndex={2}
      title=""
    >
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "style": Object {
              "color": "black",
            },
            "value": "Expression3",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
  </FeatureToggle(StructuredListBody)>
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqAlertStructuredList should render alert info structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_alert_info"
>
  <FeatureToggle(StructuredListBody)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="0"
      onClick={[Function]}
      tabIndex={0}
      title=""
    >
      <FeatureToggle(StructuredListCell)
        className="label_header"
      />
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "label": "Description",
            "value": "bar",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="1"
      onClick={[Function]}
      tabIndex={1}
      title=""
    >
      <FeatureToggle(StructuredListCell)
        className="label_header"
      />
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "label": "Active",
            "value": "Yes",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="2"
      onClick={[Function]}
      tabIndex={2}
      title=""
    >
      <FeatureToggle(StructuredListCell)
        className="label_header"
      />
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "label": "Severity",
            "value": "",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="3"
      onClick={[Function]}
      tabIndex={3}
      title=""
    >
      <FeatureToggle(StructuredListCell)
        className="label_header"
      />
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "label": "Based On",
            "value": "Server",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="4"
      onClick={[Function]}
      tabIndex={4}
      title=""
    >
      <FeatureToggle(StructuredListCell)
        className="label_header"
      />
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "label": "Expression",
            "value": "Expression",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="5"
      onClick={[Function]}
      tabIndex={5}
      title=""
    >
      <FeatureToggle(StructuredListCell)
        className="label_header"
      />
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "label": "What to Evaluate",
            "value": "What to evaluate",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="6"
      onClick={[Function]}
      tabIndex={6}
      title=""
    >
      <FeatureToggle(StructuredListCell)
        className="label_header"
      />
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "label": "Driving Event",
            "value": "Hourly",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="7"
      onClick={[Function]}
      tabIndex={7}
      title=""
    >
      <FeatureToggle(StructuredListCell)
        className="label_header"
      />
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "label": "Notification Frequency",
            "value": "1 Hour",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
  </FeatureToggle(StructuredListBody)>
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqAlertStructuredList should render alert management event structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_alert_management_event"
>
  <FeatureToggle(StructuredListBody)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="0"
      onClick={[Function]}
      tabIndex={0}
      title=""
    >
      <FeatureToggle(StructuredListCell)
        className="label_header"
      />
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "label": "Event Name",
            "value": "Event name",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
  </FeatureToggle(StructuredListBody)>
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqAlertStructuredList should render alert parameter structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_alert_parameters"
>
  <FeatureToggle(StructuredListBody)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="0"
      onClick={[Function]}
      tabIndex={0}
      title=""
    >
      <FeatureToggle(StructuredListCell)
        className="label_header"
      />
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "label": "Description type 1",
            "value": "type1 value1",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="1"
      onClick={[Function]}
      tabIndex={1}
      title=""
    >
      <FeatureToggle(StructuredListCell)
        className="label_header"
      />
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "label": "Description type 2",
            "value": Array [
              Object {
                "value": "type2 value1",
              },
              Object {
                "value": "type2 value2",
              },
            ],
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="2"
      onClick={[Function]}
      tabIndex={2}
      title=""
    >
      <FeatureToggle(StructuredListCell)
        className="label_header"
      />
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "label": "Description type 3",
            "style": Object {
              "color": "red",
            },
            "value": "type3 value1",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
  </FeatureToggle(StructuredListBody)>
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqAlertStructuredList should render alert profile structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_alert_profiles"
>
  <FeatureToggle(StructuredListBody)>
    <FeatureToggle(StructuredListRow)
      className="clickable"
      key="0"
      onClick={[Function]}
      tabIndex={0}
      title="View this Alert Profile"
    >
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "cells": Array [
              Object {
                "icon": "pficon pficon-warning-triangle-o",
                "value": "Alert description",
              },
            ],
            "onclick": "DoNav('/miq_alert_set/show/1');",
            "title": "View this Alert Profile",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
    <FeatureToggle(StructuredListRow)
      className="clickable"
      key="1"
      onClick={[Function]}
      tabIndex={1}
      title="View this Alert Profile"
    >
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "cells": Array [
              Object {
                "icon": "pficon pficon-warning-triangle-o",
                "value": "Alert description",
              },
            ],
            "onclick": "DoNav('/miq_alert_set/show/2');",
            "title": "View this Alert Profile",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
    <FeatureToggle(StructuredListRow)
      className="clickable"
      key="2"
      onClick={[Function]}
      tabIndex={2}
      title="View this Alert Profile"
    >
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "cells": Array [
              Object {
                "icon": "pficon pficon-warning-triangle-o",
                "value": "Alert description",
              },
            ],
            "onclick": "DoNav('/miq_alert_set/show/3');",
            "title": "View this Alert Profile",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
  </FeatureToggle(StructuredListBody)>
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqAlertStructuredList should render alert referenced structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_alert_referenced"
>
  <FeatureToggle(StructuredListBody)>
    <FeatureToggle(StructuredListRow)
      className="clickable"
      key="0"
      onClick={[Function]}
      tabIndex={0}
      title="View this Action"
    >
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "cells": Array [
              Object {
                "icon": "pficon pficon-warning-triangle-o",
                "value": "Alert description",
              },
            ],
            "onclick": "DoNav('/miq_action/show/1');",
            "title": "View this Action",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
    <FeatureToggle(StructuredListRow)
      className="clickable"
      key="1"
      onClick={[Function]}
      tabIndex={1}
      title="View this Action"
    >
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "cells": Array [
              Object {
                "icon": "pficon pficon-warning-triangle-o",
                "value": "Alert description",
              },
            ],
            "onclick": "DoNav('/miq_action/show/2');",
            "title": "View this Action",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
    <FeatureToggle(StructuredListRow)
      className="clickable"
      key="2"
      onClick={[Function]}
      tabIndex={2}
      title="View this Action"
    >
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "cells": Array [
              Object {
                "icon": "pficon pficon-warning-triangle-o",
                "value": "Alert description",
              },
            ],
            "onclick": "DoNav('/miq_action/show/3');",
            "title": "View this Action",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
  </FeatureToggle(StructuredListBody)>
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqAlertStructuredList should render alert sms structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_alert_send_sms"
>
  <FeatureToggle(StructuredListBody)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="0"
      onClick={[Function]}
      tabIndex={0}
      title=""
    >
      <FeatureToggle(StructuredListCell)
        className="label_header"
      />
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "label": "Host",
            "value": Array [
              Object {
                "value": "value1",
              },
              Object {
                "value": "value2",
              },
            ],
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="1"
      onClick={[Function]}
      tabIndex={1}
      title=""
    >
      <FeatureToggle(StructuredListCell)
        className="label_header"
      />
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "label": "Version",
            "value": Array [
              Object {
                "value": "value1",
              },
              Object {
                "value": "value2",
              },
            ],
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="2"
      onClick={[Function]}
      tabIndex={2}
      title=""
    >
      <FeatureToggle(StructuredListCell)
        className="label_header"
      />
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "label": "Trap Number",
            "value": "123",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
  </FeatureToggle(StructuredListBody)>
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqAlertStructuredList should render alert timeline event structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_alert_timeline_event"
>
  <FeatureToggle(StructuredListBody)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="0"
      onClick={[Function]}
      tabIndex={0}
      title=""
    >
      <FeatureToggle(StructuredListCell)
        className="label_header"
      />
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "label": "Show on Timeline",
            "value": "True",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
  </FeatureToggle(StructuredListBody)>
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqAlertStructuredList should render alert variable structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_alert_variable"
>
  <FeatureToggle(StructuredListBody)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="0"
      onClick={[Function]}
      tabIndex={0}
      title=""
    >
      <SummaryValue
        onClick={[Function]}
        row={
          Array [
            "object_id",
            "type",
            "value",
          ]
        }
      />
    </FeatureToggle(StructuredListRow)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="1"
      onClick={[Function]}
      tabIndex={1}
      title=""
    >
      <SummaryValue
        onClick={[Function]}
        row={
          Array [
            "object_id",
            "type",
            "value",
          ]
        }
      />
    </FeatureToggle(StructuredListRow)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="2"
      onClick={[Function]}
      tabIndex={2}
      title=""
    >
      <SummaryValue
        onClick={[Function]}
        row={
          Array [
            "object_id",
            "type",
            "value",
          ]
        }
      />
    </FeatureToggle(StructuredListRow)>
  </FeatureToggle(StructuredListBody)>
</FeatureToggle(StructuredListWrapper)>
`;
